# course_3

./: pyproject.toml
course/: main.py
course/utils/: operations_card.py  utils.py
tests/: test_utils.py
