[tool.poetry]
name = "course"
version = "0.1.0"
description = ""
authors = ["an1meh <adolf.ddd@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
